2010-03-04  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : return array instance if the runtime type is
	  an array (it used to return ArrayList without conveting to array).

2010-03-01  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.XsdExporter.cs, XsdDataContractExporter-new.cs:
	  refresh implementation to reflect the latest WCF impl.
	* SerializationMap.cs : make types partial.

2010-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter.cs : fix extension type name (and comment).

2010-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter.cs : added dictionary support.

2010-02-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter-new.cs, XsdDataContractImporter.cs :
	  replaced implementation.
	* ImportOptions.cs : add correct MonoTODOs.

2010-02-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter-new.cs : output [KnownType] to expose
	  base/derived type relationship.

2010-02-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter-new.cs : fix GenerateInternal.

2010-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter-new.cs : refresh implementation that is
	  not based on xml serialization. Not enabled yet.
	* KnownTypeCollection.cs : add cosmetic comment.

2010-02-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter.cs : add appropriate code namespaces
	  imported from xsd namespace.

2010-02-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter.cs : do not add primitive ArrayOfxxx types.

2010-02-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdDataContractImporter.cs : some generated attributes are put
	  on enums too.

2010-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : allow readonly field as data member.
	  Fixed bug #560155.

2010-01-08  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs, KnownTypeCollection.cs : differentiate